<resources>
    <string name="app_name">CardViews Assignment</string>
    <string name="julie">Julie</string>
    <string name="i_realized_i_m_big_on_reciprocity_that_s_why_i_don_t_fw_a_lot_of_mfs_cause_come_for_me_the_same_way_i_come_for_you">I realized I’m big on reciprocity. That’s why I don’t fw a lot of mfs. Cause come for me the same way I come for you!!</string>
    <string name="_117">117</string>
    <string name="_200">200</string>
    <string name="_1_3k">1.3k</string>
</resources>