<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTweet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tvnum2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imperson"
                android:layout_width="76dp"
                android:layout_height="78dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_person_pin_24" />

            <TextView
                android:id="@+id/tvname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:text="@string/julie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.149"
                app:layout_constraintStart_toEndOf="@+id/imperson"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvhandle"
                android:layout_width="67dp"
                android:layout_height="23dp"
                android:layout_marginTop="33dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.188"
                app:layout_constraintStart_toEndOf="@+id/tvname"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="juliethemids" />

            <TextView
                android:id="@+id/tvtweet"
                android:layout_width="301dp"
                android:layout_height="53dp"
                android:layout_marginTop="11dp"
                android:text="@string/i_realized_i_m_big_on_reciprocity_that_s_why_i_don_t_fw_a_lot_of_mfs_cause_come_for_me_the_same_way_i_come_for_you"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imperson"
                app:layout_constraintTop_toBottomOf="@+id/tvhandle" />

            <ImageView
                android:id="@+id/imcomment"
                android:layout_width="44dp"
                android:layout_height="46dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="28dp"
                app:layout_constraintEnd_toStartOf="@+id/imretweet"
                app:layout_constraintStart_toEndOf="@+id/imperson"
                app:layout_constraintTop_toBottomOf="@+id/tvtweet"
                app:srcCompat="@drawable/ic_baseline_insert_comment_24" />

            <ImageView
                android:id="@+id/imretweet"
                android:layout_width="48dp"
                android:layout_height="45dp"
                android:layout_marginStart="152dp"
                android:layout_marginEnd="21dp"
                app:layout_constraintEnd_toStartOf="@+id/imlike"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imcomment"
                app:srcCompat="@drawable/ic_baseline_repeat_24" />

            <ImageView
                android:id="@+id/imlike"
                android:layout_width="50dp"
                android:layout_height="49dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toStartOf="@+id/imshare"
                app:layout_constraintStart_toEndOf="@+id/imretweet"
                app:layout_constraintTop_toTopOf="@+id/imretweet"
                app:srcCompat="@drawable/ic_baseline_favorite_24" />

            <ImageView
                android:id="@+id/imshare"
                android:layout_width="44dp"
                android:layout_height="47dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imlike"
                app:srcCompat="@drawable/ic_baseline_share_24" />

            <TextView
                android:id="@+id/tvnum1"
                android:layout_width="35dp"
                android:layout_height="34dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="28dp"
                android:text="@string/_117"
                app:layout_constraintEnd_toStartOf="@+id/imretweet"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imcomment"
                app:layout_constraintTop_toBottomOf="@+id/tvtweet" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="34dp"
                android:layout_height="21dp"
                android:layout_marginEnd="8dp"
                android:text="@string/_200"
                app:layout_constraintEnd_toStartOf="@+id/imlike"
                app:layout_constraintTop_toTopOf="@+id/tvnum1" />

            <TextView
                android:id="@+id/tvnum3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/_1_3k"
                app:layout_constraintEnd_toStartOf="@+id/imshare"
                app:layout_constraintStart_toEndOf="@+id/imlike"
                app:layout_constraintTop_toTopOf="@+id/textView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>